# niceprelude

./: README.md  niceprelude.cabal  stack.yaml
src/: List.hs  NicePrelude.hs
