name: niceprelude
version: 0.0.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 brady.ouren <brady.ouren@gmail.com>
maintainer: brady.ouren <brady.ouren@gmail.com>
synopsis: Alternative prelude
description: Alternative prelude
category: General
author: brady.ouren <brady.ouren@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/tippenein/niceprelude

library
  exposed-modules:
    NicePrelude
    Unsafe

  other-modules:
    Base
    Applicative
    Bool
    Debug
    List
    Monad
    Show
    Conv
    Either
    Functor
    Semiring
    Bifunctor

  default-extensions:
    NoImplicitPrelude
    OverloadedStrings
    FlexibleContexts
    MultiParamTypeClasses

  ghc-options:
    -Wall
    -fno-warn-unused-imports
    -fwarn-implicit-prelude

  build-depends:
      base             >= 4.6  && <4.10
    , ghc-prim         >= 0.3  && <0.6
    , safe             >= 0.3  && <0.4
    , async            >= 2.1  && <2.2
    , deepseq          >= 1.3  && <= 1.5
    , containers       >= 0.5  && <0.6
    , mtl              >= 2.1  && <2.3
    , transformers     >= 0.4  && < 0.6
    , text             >= 1.2  && <1.3
    , stm              >= 2.4  && <2.5
    , string-conv      >= 0.1  && <0.2
    , bytestring       >= 0.10 && <0.11
    , liquidhaskell
  hs-source-dirs:      src
  default-language:    Haskell2010

